[package]
name = "advent_of_code_2023"
version = "0.1.0"
authors = ["Gary Field <gary.field@pobox.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day4"
path = "src/day4.rs"

[[bin]]
name = "day6"
path = "src/day6.rs"

[[bin]]
name = "day8"
path = "src/day8.rs"
